--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Top Menu -->
 
-  <div class="top-menu">
+  <!-- <div class="top-menu">
 
     <div class="top-menu-infos">
       <ul class="top-menu-infos-list">
@@ -31,7 +31,7 @@
       </ul>
 
     </div>
-  </div>
+  </div> -->
 
   <!-- Navigation -->
 
