--- a/index.html
+++ b/index.html
@@ -40,30 +40,30 @@
 
     <ul class="navigation-list">
 
-        <li><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
-            <p class="list-item">Címlap</p>
-          </a></li>
+      <li><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
+          <p class="list-item">Címlap</p>
+        </a></li>
 
-        <li><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
-            <p class="list-item">Termékek</p>
-          </a></li>
+      <li><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
+          <p class="list-item">Termékek</p>
+        </a></li>
 
-        <li class="list-item-left"><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
-            <p class="list-item">Galéria</p>
-          </a></li>
+      <li class="list-item-left"><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
+          <p class="list-item">Galéria</p>
+        </a></li>
 
 
-        <li class="list-item-right"><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
-            <p class="list-item">Akció</p>
-          </a></li>
+      <li class="list-item-right"><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
+          <p class="list-item">Akció</p>
+        </a></li>
 
-        <li><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
-            <p class="list-item">Információk</p>
-          </a></li>
+      <li><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
+          <p class="list-item">Információk</p>
+        </a></li>
 
-        <li><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
-            <p class="list-item">Egyéb</p>
-          </a></li>
+      <li><a href="#"><img src="img/pizza-slice_icon.png" alt="" id="pizza-icon">
+          <p class="list-item">Egyéb</p>
+        </a></li>
 
     </ul>
 
@@ -72,7 +72,13 @@
   <!-- Hero Area -->
 
   <div class="hero-area">
-    <img src="img/hero_area_img4.jpg" alt="" class="hero_area_img">
+
+    <picture>
+      <source srcset="img/hero_area_img4.jpg" media="(min-width: 696px)" class="hero_area_img/">
+      <source srcset="img/hero_area_mobile_img.jpg" media="(min-width: 0px)" class="hero_area_img/">
+      <img src="img/hero_area_mobile_img.jpg" class="hero_area_img"/>
+    </picture>
+
   </div>
 
   <!-- Content -->
