--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   <div class="hero-area">
 
     <picture>
-      <source srcset="../img/hero_area_img4.jpg" media="(min-width: 696px)" class="hero_area_img/">
-      <source srcset="../img/hero_area_mobile_img.jpg" media="(min-width: 0px)" class="hero_area_img/">
-      <img src="../img/hero_area_mobile_img.jpg" class="hero_area_img"/>
+      <source srcset="img/hero_area_img4.jpg" media="(min-width: 696px)" class="hero_area_img/">
+      <source srcset="img/hero_area_mobile_img.jpg" media="(min-width: 0px)" class="hero_area_img/">
+      <img src="img/hero_area_mobile_img.jpg" class="hero_area_img"/>
     </picture>
 
   </div>
